<package format="3">
  <name>point_cloud_transport_tutorial</name>
  <version>1.0.0</version>
  <description>Tutorial for point_cloud_transport.</description>
  <author>Jakub Paplham</author>
  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cras_cpp_common</build_depend>
  <build_depend>point_cloud_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>topic_tools</build_depend>

  <exec_depend>cras_cpp_common</exec_depend>
  <exec_depend>point_cloud_transport</exec_depend>
  <exec_depend>point_cloud_transport_plugins</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>topic_tools</exec_depend>
</package>
